Dat - address for admin

--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -36,6 +36,10 @@
                             <i data-feather="briefcase" width="20"></i>
                             <span>Địa Điểm</span>
                         </a>
+                        <a th:href="@{/address}" class='sidebar-link'>
+                            <i data-feather="briefcase" width="20"></i>
+                            <span>Duyệt địa điểm</span>
+                        </a>
                     </li>
 
                     <li class='sidebar-title'>QUẢN LÝ TIN TỨC TỪ THIỆN</li>
