--- a/charity/src/main/resources/templates/login.html
+++ b/charity/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
                                 <h3>Sign In</h3>
                                 <p>Please sign in to continue to Voler.</p>
                             </div>
-                            <form th:action="@{/login}" method="post">
+                            <form th:action="@{/admin/login}" method="post">
                                 <div class="form-group position-relative has-icon-left">
                                     <label for="username">Username</label>
                                     <div class="position-relative">
