--- a/charity/src/main/resources/templates/login.html
+++ b/charity/src/main/resources/templates/login.html
@@ -61,7 +61,7 @@
                                         <label for="checkbox1">Remember me</label>
                                     </div>
                                     <div class="float-end">
-                                        <a th:href="@{/register}">Don't have an account?</a>
+                                        <a th:href="@{/admin/register}">Don't have an account?</a>
                                     </div>
                                 </div>
                                 <div class="clearfix">
