--- a/charity/src/main/resources/templates/pages/reports.html
+++ b/charity/src/main/resources/templates/pages/reports.html
@@ -30,7 +30,7 @@
                             <td th:text="${r.user.username}"></td>  
                             <td th:text="${r.post.id}"></td>  
                             <td>
-                                <a class="btn btn-primary" th:href="@{/reports/{id}(id=${r.id})}">XỬ LÝ</a>
+                                <a class="btn btn-primary" th:href="@{/admin/reports/{id}(id=${r.id})}">XỬ LÝ</a>
                             </td>
                         </tr>
                     </tbody>
