--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -36,7 +36,7 @@
                             <i data-feather="briefcase" width="20"></i>
                             <span>Địa Điểm</span>
                         </a>
-                        <a th:href="@{/admin/address}" class='sidebar-link'>
+                        <a th:href="@{/admin/pending_address}" class='sidebar-link'>
                             <i data-feather="briefcase" width="20"></i>
                             <span>Duyệt địa điểm</span>
                         </a>
