Long - Config function user send project

--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -32,13 +32,17 @@
                             <i data-feather="briefcase" width="20"></i>
                             <span>Dự Án</span>
                         </a>
+                        <a th:href="@{/admin/pending-project}" class='sidebar-link'>
+                            <i data-feather="briefcase" width="20"></i>
+                            <span>Duyệt Dự Án</span>
+                        </a>
                         <a th:href="@{/admin/addresses}" class='sidebar-link'>
                             <i data-feather="briefcase" width="20"></i>
                             <span>Địa Điểm</span>
                         </a>
                         <a th:href="@{/admin/pending_address}" class='sidebar-link'>
                             <i data-feather="briefcase" width="20"></i>
-                            <span>Duyệt địa điểm</span>
+                            <span>Duyệt Địa Điểm</span>
                         </a>
                     </li>
 
