--- a/charity/src/main/resources/templates/fragments/header.html
+++ b/charity/src/main/resources/templates/fragments/header.html
@@ -71,7 +71,7 @@
                         <i data-feather="settings"></i> Settings
                     </a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" th:href="@{/admin/login}"><i data-feather="log-out"></i> Logout</a>
+                    <a class="dropdown-item" th:href="@{/logout}"><i data-feather="log-out"></i> Logout</a>
                 </div>
             </li>
         </ul>
