--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -22,6 +22,18 @@
                         </a>
                     </li>
 
+                    <li class='sidebar-title'>QUẢN LÝ XÉT DUYỆT</li>
+                    <li class="sidebar-item">
+                        <a th:href="@{/admin/pending-project}" class='sidebar-link'>
+                            <i data-feather="briefcase" width="20"></i>
+                            <span>Dự Án Mới</span>
+                        </a>
+                        <a th:href="@{/admin/pending_address}" class='sidebar-link'>
+                            <i data-feather="briefcase" width="20"></i>
+                            <span>Địa Điểm Dự Án Mới</span>
+                        </a>
+                    </li>
+
                     <li class='sidebar-title'>QUẢN LÝ DỰ ÁN TỪ THIỆN</li>
                     <li class="sidebar-item">
                         <a th:href="@{/admin/pcategories}" class='sidebar-link'>
@@ -32,17 +44,9 @@
                             <i data-feather="briefcase" width="20"></i>
                             <span>Dự Án</span>
                         </a>
-                        <a th:href="@{/admin/pending-project}" class='sidebar-link'>
-                            <i data-feather="briefcase" width="20"></i>
-                            <span>Duyệt Dự Án</span>
-                        </a>
                         <a th:href="@{/admin/addresses}" class='sidebar-link'>
                             <i data-feather="briefcase" width="20"></i>
                             <span>Địa Điểm</span>
-                        </a>
-                        <a th:href="@{/admin/pending_address}" class='sidebar-link'>
-                            <i data-feather="briefcase" width="20"></i>
-                            <span>Duyệt Địa Điểm</span>
                         </a>
                     </li>
 
@@ -86,17 +90,25 @@
                         </a>
                     </li>
 
+                    <li class='sidebar-title'>QUẢN LÝ QUYÊN GÓP</li>
+                    <li class="sidebar-item">
+                        <a th:href="@{/admin/payment-contributions}" class='sidebar-link'>
+                            <i data-feather="file-text" width="20"></i>
+                            <span>Hiện Kim</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-item">
+                        <a th:href="@{/admin/item-contributions}" class='sidebar-link'>
+                            <i data-feather="file-text" width="20"></i>
+                            <span>Hiện Vật</span>
+                        </a>
+                    </li>
+
                     <li class='sidebar-title'>QUẢN LÝ MẠNG XÃ HỘI</li>
                     <li class="sidebar-item">
                         <a th:href="@{/admin/reports}" class='sidebar-link'>
                             <i data-feather="file-text" width="20"></i>
-                            <span>Báo Cáo</span>
-                        </a>
-                    </li>
-                    <li class="sidebar-item">
-                        <a th:href="@{/admin/export}" class='sidebar-link'>
-                            <i data-feather="file-text" width="20"></i>
-                            <span>Sao Kê</span>
+                            <span>Bài Viết Báo Cáo</span>
                         </a>
                     </li>
                 </ul>
