--- a/charity/src/main/resources/templates/pages/payment_contributions.html
+++ b/charity/src/main/resources/templates/pages/payment_contributions.html
@@ -28,7 +28,7 @@
                             <td th:text="${p.user.username}"></td>
                             <td th:text="${p.donateAmount}"></td>
                             <td th:text="${p.donateDate}"></td>
-                        </tr>                        
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -36,12 +36,13 @@
 
 
         <!-- Monthly Report Buttons -->
+        <!-- Monthly Report Buttons -->
         <div class="mt-5">
             <h2>BÁO CÁO HÀNG THÁNG</h2>
             <div class="row">
                 <div class="col-md-6" th:each="year : ${yearlyYearsWithData}">
                     <div th:each="month : ${#numbers.sequence(1, 12)}">
-                        <a th:href="@{/api/export/?period=monthly&year=' + ${year} + '&month=' + ${month}}"
+                        <a th:href="@{/api/export/(period='monthly', year=${year}, month=${month})}"
                             class="btn btn-primary mt-2 col-md-6" th:text="'Tháng ' + ${month} + ' năm ' + ${year}"></a>
                     </div>
                 </div>
@@ -54,7 +55,7 @@
             <div class="row">
                 <div class="col-md-6" th:each="year : ${yearlyYearsWithData}">
                     <div th:each="quarter : ${#numbers.sequence(1, 4)}">
-                        <a th:href="@{/api/export/?period=quarterly&year=2024&quarter={quarter}(quarter=${quarter})}"
+                        <a th:href="@{/api/export/(period='quarterly', year=${year}, quarter=${quarter})}"
                             class="btn btn-primary mt-2 col-md-6" th:text="'Quý ' + ${quarter} + ' năm ' + ${year}"></a>
                     </div>
                 </div>
@@ -67,12 +68,13 @@
             <div class="row">
                 <div class="col-md-6" th:each="year : ${yearlyYearsWithData}">
                     <div>
-                        <a th:href="@{/api/export/?period=yearly&year={year}(year=${year})}"
-                            class="btn btn-primary mt-2" th:text="'Năm ' + ${year}"></a>
+                        <a th:href="@{/api/export/(period='yearly', year=${year})}" class="btn btn-primary mt-2"
+                            th:text="'Năm ' + ${year}"></a>
                     </div>
                 </div>
             </div>
         </div>
+
 
     </div>
 
