Long - Update donate items admin, api

--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -32,6 +32,10 @@
                             <i data-feather="briefcase" width="20"></i>
                             <span>Địa Điểm Dự Án Mới</span>
                         </a>
+                        <a th:href="@{/admin/pending-transport}" class='sidebar-link'>
+                            <i data-feather="file-text" width="20"></i>
+                            <span>Đơn Vận Chuyển Mới</span>
+                        </a>
                     </li>
 
                     <li class='sidebar-title'>QUẢN LÝ DỰ ÁN TỪ THIỆN</li>
@@ -94,15 +98,22 @@
                     <li class="sidebar-item">
                         <a th:href="@{/admin/payment-contributions}" class='sidebar-link'>
                             <i data-feather="file-text" width="20"></i>
-                            <span>Hiện Kim</span>
+                            <span>Quyên Góp Hiện Kim</span>
                         </a>
                     </li>
                     <li class="sidebar-item">
                         <a th:href="@{/admin/item-contributions}" class='sidebar-link'>
                             <i data-feather="file-text" width="20"></i>
-                            <span>Hiện Vật</span>
+                            <span>Quyên Góp Hiện Vật</span>
                         </a>
                     </li>
+                    <li class="sidebar-item">
+                        <a th:href="@{/admin/transport}" class='sidebar-link'>
+                            <i data-feather="file-text" width="20"></i>
+                            <span>Vận Chuyển Hiện Vật</span>
+                        </a>
+                    </li>
+        
 
                     <li class='sidebar-title'>QUẢN LÝ MẠNG XÃ HỘI</li>
                     <li class="sidebar-item">
