--- a/charity/src/main/resources/templates/fragments/sidebar.html
+++ b/charity/src/main/resources/templates/fragments/sidebar.html
@@ -32,6 +32,10 @@
                             <i data-feather="briefcase" width="20"></i>
                             <span>Địa Điểm Dự Án Mới</span>
                         </a>
+                        <a th:href="@{/admin/pending-feedback}" class='sidebar-link'>
+                            <i data-feather="briefcase" width="20"></i>
+                            <span>Phản hồi Dự Án</span>
+                        </a>
                         <a th:href="@{/admin/pending-transport}" class='sidebar-link'>
                             <i data-feather="file-text" width="20"></i>
                             <span>Đơn Vận Chuyển Mới</span>
